Resolved dependency problems after merging master into this branch