@@ -1,11 +1,15 @@
 package de.enflexit.awb.ws.restapi.gen;
 
-import de.enflexit.awb.ws.restapi.gen.model.*;
 import de.enflexit.awb.ws.restapi.gen.EventLogApiService;
 import de.enflexit.awb.ws.restapi.gen.factories.EventLogApiServiceFactory;
 
-import io.swagger.annotations.ApiParam;
-import io.swagger.jaxrs.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
 import de.enflexit.awb.ws.restapi.gen.model.Event;
 import de.enflexit.awb.ws.restapi.gen.model.EventLogTypes;
@@ -19,30 +23,31 @@ import java.io.InputStream;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 import org.glassfish.jersey.media.multipart.FormDataBodyPart;
 
-import javax.servlet.ServletConfig;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.*;
-import javax.validation.constraints.*;
-import javax.validation.Valid;
+import jakarta.servlet.ServletConfig;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.SecurityContext;
+import jakarta.ws.rs.*;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
 
 @Path("/eventLog")
 
 
-@io.swagger.annotations.Api(description = "the eventLog API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-03-21T17:19:35.482673500+01:00[Europe/Berlin]")
+@Tag(description = "the eventLog API", name = "")
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-04-02T17:38:36.020041800+02:00[Europe/Berlin]", comments = "Generator version: 7.4.0")
 public class EventLogApi  {
+
    private final EventLogApiService delegate;
 
    public EventLogApi(@Context ServletConfig servletContext) {
-      EventLogApiService delegate = null;
 
+      EventLogApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("EventLogApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (EventLogApiService) Class.forName(implClass).newInstance();
+               delegate = (EventLogApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -52,21 +57,19 @@ public class EventLogApi  {
       if (delegate == null) {
          delegate = EventLogApiServiceFactory.getEventLogApi();
       }
-
       this.delegate = delegate;
    }
 
-    @GET
-    
-    
+
+    @jakarta.ws.rs.GET
     @Produces({ "application/json" })
-    @io.swagger.annotations.ApiOperation(value = "get logs of specific type", notes = "", response = Event.class, responseContainer = "List", authorizations = {
-        @io.swagger.annotations.Authorization(value = "BearerAuth")
-    }, tags={ "info", })
-    @io.swagger.annotations.ApiResponses(value = {
-        @io.swagger.annotations.ApiResponse(code = 200, message = "Return Logs of specified type", response = Event.class, responseContainer = "List")
-    })
-    public Response eventLogGet(@ApiParam(value = "The type which is retrieved by awb", required = true, allowableValues="AWB, Project, Setup, Agent") @QueryParam("type") @NotNull @Valid  EventLogTypes type,@ApiParam(value = "the maximum number of logs to retrieve. If no number is specified the default is 10", defaultValue = "10") @DefaultValue("10") @QueryParam("amount")  @Min(1) @Max(100) Integer amount,@Context SecurityContext securityContext)
+    @Operation(summary = "get logs of specific type", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "Return Logs of specified type", content = 
+                @Content(schema = @Schema(implementation = Event.class))),
+            },security = {
+            @SecurityRequirement(name = "BearerAuth")
+        }, tags={ "info", }) 
+    public Response eventLogGet(@Schema(description = "The type which is retrieved by awb", allowableValues="AWB, Project, Setup, Agent") @QueryParam("type") @NotNull @Valid  EventLogTypes type,@Schema(description = "the maximum number of logs to retrieve. If no number is specified the default is 10", defaultValue = "10") @DefaultValue("10") @QueryParam("amount")  @Min(1) @Max(100) Integer amount,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.eventLogGet(type, amount, securityContext);
     }
