@@ -1,11 +1,15 @@
 package de.enflexit.awb.ws.restapi.gen;
 
-import de.enflexit.awb.ws.restapi.gen.model.*;
 import de.enflexit.awb.ws.restapi.gen.IsUpdateAvailableApiService;
 import de.enflexit.awb.ws.restapi.gen.factories.IsUpdateAvailableApiServiceFactory;
 
-import io.swagger.annotations.ApiParam;
-import io.swagger.jaxrs.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
 
 import java.util.Map;
@@ -17,30 +21,31 @@ import java.io.InputStream;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 import org.glassfish.jersey.media.multipart.FormDataBodyPart;
 
-import javax.servlet.ServletConfig;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.*;
-import javax.validation.constraints.*;
-import javax.validation.Valid;
+import jakarta.servlet.ServletConfig;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.SecurityContext;
+import jakarta.ws.rs.*;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
 
 @Path("/isUpdateAvailable")
 
 
-@io.swagger.annotations.Api(description = "the isUpdateAvailable API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-03-21T17:19:35.482673500+01:00[Europe/Berlin]")
+@Tag(description = "the isUpdateAvailable API", name = "")
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-04-02T17:38:36.020041800+02:00[Europe/Berlin]", comments = "Generator version: 7.4.0")
 public class IsUpdateAvailableApi  {
+
    private final IsUpdateAvailableApiService delegate;
 
    public IsUpdateAvailableApi(@Context ServletConfig servletContext) {
-      IsUpdateAvailableApiService delegate = null;
 
+      IsUpdateAvailableApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("IsUpdateAvailableApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (IsUpdateAvailableApiService) Class.forName(implClass).newInstance();
+               delegate = (IsUpdateAvailableApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -50,20 +55,18 @@ public class IsUpdateAvailableApi  {
       if (delegate == null) {
          delegate = IsUpdateAvailableApiServiceFactory.getIsUpdateAvailableApi();
       }
-
       this.delegate = delegate;
    }
 
-    @GET
-    
-    
+
+    @jakarta.ws.rs.GET
     @Produces({ "application/json" })
-    @io.swagger.annotations.ApiOperation(value = "Checks wether an update for the AWB is available or not", notes = "", response = Boolean.class, authorizations = {
-        @io.swagger.annotations.Authorization(value = "BearerAuth")
-    }, tags={ "info", })
-    @io.swagger.annotations.ApiResponses(value = {
-        @io.swagger.annotations.ApiResponse(code = 200, message = "request successful. boolean in response indicates wether update is available or not", response = Boolean.class)
-    })
+    @Operation(summary = "Checks wether an update for the AWB is available or not", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "request successful. boolean in response indicates wether update is available or not", content = 
+                @Content(schema = @Schema(implementation = Boolean.class))),
+            },security = {
+            @SecurityRequirement(name = "BearerAuth")
+        }, tags={ "info", }) 
     public Response isUpdateAvailableGet(@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.isUpdateAvailableGet(securityContext);
