@@ -1,11 +1,15 @@
 package de.enflexit.awb.ws.restapi.gen;
 
-import de.enflexit.awb.ws.restapi.gen.model.*;
 import de.enflexit.awb.ws.restapi.gen.VersionApiService;
 import de.enflexit.awb.ws.restapi.gen.factories.VersionApiServiceFactory;
 
-import io.swagger.annotations.ApiParam;
-import io.swagger.jaxrs.*;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
 import de.enflexit.awb.ws.restapi.gen.model.Version;
 
@@ -18,30 +22,31 @@ import java.io.InputStream;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 import org.glassfish.jersey.media.multipart.FormDataBodyPart;
 
-import javax.servlet.ServletConfig;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.*;
-import javax.validation.constraints.*;
-import javax.validation.Valid;
+import jakarta.servlet.ServletConfig;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.SecurityContext;
+import jakarta.ws.rs.*;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
 
 @Path("/version")
 
 
-@io.swagger.annotations.Api(description = "the version API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-03-21T17:19:35.482673500+01:00[Europe/Berlin]")
+@Tag(description = "the version API", name = "")
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-04-02T17:38:36.020041800+02:00[Europe/Berlin]", comments = "Generator version: 7.4.0")
 public class VersionApi  {
+
    private final VersionApiService delegate;
 
    public VersionApi(@Context ServletConfig servletContext) {
-      VersionApiService delegate = null;
 
+      VersionApiService delegate = null;
       if (servletContext != null) {
          String implClass = servletContext.getInitParameter("VersionApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (VersionApiService) Class.forName(implClass).newInstance();
+               delegate = (VersionApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
@@ -51,20 +56,18 @@ public class VersionApi  {
       if (delegate == null) {
          delegate = VersionApiServiceFactory.getVersionApi();
       }
-
       this.delegate = delegate;
    }
 
-    @GET
-    
-    
+
+    @jakarta.ws.rs.GET
     @Produces({ "application/json" })
-    @io.swagger.annotations.ApiOperation(value = "Return most up to date version number", notes = "", response = Version.class, authorizations = {
-        @io.swagger.annotations.Authorization(value = "BearerAuth")
-    }, tags={ "info", })
-    @io.swagger.annotations.ApiResponses(value = {
-        @io.swagger.annotations.ApiResponse(code = 200, message = "Request was successful and user receives versionNumber", response = Version.class)
-    })
+    @Operation(summary = "Return most up to date version number", description = "", responses = {
+            @ApiResponse(responseCode = "200", description = "Request was successful and user receives versionNumber", content = 
+                @Content(schema = @Schema(implementation = Version.class))),
+            },security = {
+            @SecurityRequirement(name = "BearerAuth")
+        }, tags={ "info", }) 
     public Response versionGet(@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.versionGet(securityContext);
